tests/testcrate/tests/ui/select_join.stderr
error: mismatched types
expected type `ForeignKey<_>`
   found type `String`
  --> $DIR/select_join.rs:41:5
   |
41 |     field1: String,
   |     ^^^^^^^^^^^^^^
...
57 |     sql!(Table.all().join(field1, i32_field));
   |                           ------ in this macro invocation

error: mismatched types
expected type `ForeignKey<_>`
   found type `i32`
  --> $DIR/select_join.rs:42:5
   |
42 |     i32_field: i32,
   |     ^^^^^^^^^^^^^^
...
57 |     sql!(Table.all().join(field1, i32_field));
   |                                   --------- in this macro invocation

error[E0308]: mismatched types
  --> $DIR/select_join.rs:57:27
   |
57 |     sql!(Table.all().join(field1, i32_field));
   |                           ^^^^^^ expected enum `std::option::Option`, found struct `std::string::String`
   |
   = note: expected type `std::option::Option<_>`
              found type `std::string::String`

error[E0308]: mismatched types
  --> $DIR/select_join.rs:57:35
   |
57 |     sql!(Table.all().join(field1, i32_field));
   |                                   ^^^^^^^^^ expected enum `std::option::Option`, found i32
   |
   = note: expected type `std::option::Option<_>`
              found type `i32`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
